[package]
authors = ["rise0chen <rise0chen@163.com>"]
description = "update model by field"
edition = "2018"
license-file = "LICENSE"
name = "sea-orm-field-updater"
readme = "./README.md"
repository = "https://github.com/rise0chen/sea-orm-field-updater.git"
version = "0.0.2"

[dependencies]
convert_ident = "0"
heck = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[lib]
proc-macro = true
